The planets and the background where not going in the same direction, so that was goofy.

--- a/webserver/mysite/webapp/templates/webapp/home.html
+++ b/webserver/mysite/webapp/templates/webapp/home.html
@@ -59,8 +59,8 @@
                     let _mouseY = e.clientY;
 
                     let offset_coeff = 0.005;
-                    let bg_Xoffset = (_mouseX - _w/2) * offset_coeff;
-                    let bg_Yoffset = (_mouseY - _h/2) * offset_coeff;
+                    let bg_Xoffset = -(_mouseX - _w/2) * offset_coeff;
+                    let bg_Yoffset = -(_mouseY - _h/2) * offset_coeff;
 
                     elem.style.backgroundPosition = `${bg_Xoffset}% ${bg_Yoffset}%`;
                 }
