--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -24,7 +24,7 @@ body{
 #parallax_nav {
   position: relative;
   width: 100%;
-  height: 500px;
+  height: 350px;
   background-image: url('/static/webapp/NEPTUNE.png'), url('/static/webapp/URANUS.png'), url('/static/webapp/SATURNE.png'), url('/static/webapp/JUPITER.png'), url('/static/webapp/MARS.png'), url('/static/webapp/EARTH.png'), url('/static/webapp/VENUS.png'), url('/static/webapp/MERCURY.png'), url('/static/webapp/SUN.png');
   background-repeat: no-repeat;
   background-position: 50% 50%;
@@ -33,6 +33,7 @@ body{
 }
 
 #content{
+  background-color:rgba(255, 0, 0, 0.5);
   position: relative;
   background-position: 50% 50%;
   font-size:25px;
