--- a/webserver/mysite/webapp/templates/webapp/home.html
+++ b/webserver/mysite/webapp/templates/webapp/home.html
@@ -20,12 +20,12 @@
                 
                 // Magic happens here
                 function parallax_nav(e) {
-                    let _w = 1080/2;
-                    let _h = 500/2;
+                    let _w = 1080;
+                    let _h = 500;
                     let _mouseX = e.clientX;
                     let _mouseY = e.clientY;
                     
-                    if (_mouseY < 500){
+                    if (_mouseY < 350){
                     let _depth1 = `${50 - (_mouseX - _w) * 0.005}% ${50 - (_mouseY - _h) * 0.005}%`;
                     let _depth2 = `${50 - (_mouseX - _w) * 0.01}% ${50 - (_mouseY - _h) * 0.01}%`;
                     let _depth3 = `${50 - (_mouseX - _w) * 0.02}% ${50 - (_mouseY - _h) * 0.02}%`;
