Added some navigation links + deleted the bottom div. This is a welcome page not  the about page

--- a/webserver/mysite/webapp/templates/webapp/home.html
+++ b/webserver/mysite/webapp/templates/webapp/home.html
@@ -7,10 +7,14 @@
         <link rel="stylesheet" href="{% static 'webapp/home.css' %}">
     </head>
     <body>
-        <nav id="parallax_nav"><h1 id="wlc_title">@auto_astro</h1></nav>
-        <div id="content">
-            <p>HELLO WORLD</p>
-        </div>
+        <nav id="parallax_nav">
+            <h1 id="wlc_title">@auto_astro</h1>
+            <br><br>
+            <a href='' id="navLink"></a>Sign Up / Log in</a>
+            <a href='' id="navLink">Explore the Skies</a>
+            <a href='' id="navLink">About</a>
+            <a href='' id="navLink">Contact Us</a>
+        </nav>
         <!-- Parallax for Proportional Solar System in NAV -->
         <script>
             (function() {
