--- a/webserver/mysite/webapp/templates/webapp/home.html
+++ b/webserver/mysite/webapp/templates/webapp/home.html
@@ -10,7 +10,7 @@
         <nav id="parallax_nav">
             <h1 id="wlc_title">@auto_astro</h1>
             <br><br>
-            <a href='' id="navLink"></a>Sign Up / Log in</a>
+            <a href='' id="navLink">Sign Up / Log in</a>
             <a href='' id="navLink">Explore the Skies</a>
             <a href='' id="navLink">About</a>
             <a href='' id="navLink">Contact Us</a>
