--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -10,9 +10,20 @@ body{
   background-repeat: repeat;
   background-position: center;
 }
+#parallax_nav {
+  position: relative;
+  width: 100%;
+  height: 200px;
+  background-image: url('/static/webapp/NEPTUNE.png'), url('/static/webapp/URANUS.png'), url('/static/webapp/SATURNE.png'), url('/static/webapp/JUPITER.png'), url('/static/webapp/MARS.png'), url('/static/webapp/EARTH.png'), url('/static/webapp/VENUS.png'), url('/static/webapp/MERCURY.png'), url('/static/webapp/SUN.png');
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: calc(7.04% * 0.65), calc(7.26% * 0.65), calc(16.66% * 1.1), calc(20% * 0.65), calc(0.97% * 0.65), calc(1.82% * 0.65), calc(1.73% * 0.65), calc(0.7% * 0.65), calc(20% * 0.65);
+  opacity: 1.0;
+}
 #wlc_title {
   position: absolute;
-  top: 20%;
+  font-weight:bold;
+  top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: rgb(92, 204, 204);
@@ -25,14 +36,11 @@ body{
   0 0 20px #99EBEB,
   0 0 30px #66E0E0;
 }
-
-#parallax_nav {
-  position: relative;
-  width: 100%;
-  height: 200px;
-  background-image: url('/static/webapp/NEPTUNE.png'), url('/static/webapp/URANUS.png'), url('/static/webapp/SATURNE.png'), url('/static/webapp/JUPITER.png'), url('/static/webapp/MARS.png'), url('/static/webapp/EARTH.png'), url('/static/webapp/VENUS.png'), url('/static/webapp/MERCURY.png'), url('/static/webapp/SUN.png');
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: calc(7.04% * 0.65), calc(7.26% * 0.65), calc(16.66% * 1.1), calc(20% * 0.65), calc(0.97% * 0.65), calc(1.82% * 0.65), calc(1.73% * 0.65), calc(0.7% * 0.65), calc(20% * 0.65);
-  opacity: 1.0;
+#navLink {
+  opacity:1.0;
+  color:#ffffff;
+  font-size:30px;
+  font-weight:lighter;
+  position:relative;
+  padding:50px;
 }
