--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -39,8 +39,9 @@ body{
 #navLink {
   opacity:1.0;
   color:#ffffff;
-  font-size:30px;
+  font-size:15px;
   font-weight:lighter;
   position:relative;
   padding:50px;
+  margin-top:100px;
 }
