--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -41,7 +41,6 @@ body{
   color:#ffffff;
   font-size:15px;
   font-weight:lighter;
-  position:relative;
+  position:absolute;
   padding:50px;
-  margin-top:100px;
 }
