--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -36,7 +36,7 @@ body{
   0 0 20px #99EBEB,
   0 0 30px #66E0E0;
 }
-#navLink {
+nav a {
   opacity:1.0;
   color:#ffffff;
   font-size:15px;
@@ -46,4 +46,11 @@ body{
   margin-bottom:47%;
   margin-right:50px;
   margin-left:50px;
+}
+
+nav {
+  position: fixed;
+  top:0px;
+  justify-content: space-between;
+  margin: 0 50px;
 }
