--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -12,14 +12,12 @@ body{
 }
 #parallax_nav {
   font-family: 'Orbitron', sans-serif;
-  background-color:rgba(0, 0, 0, 0.3);
   position: fixed;
   top:0px;
-  justify-content: space-between;
-  position: relative;
   width: 100%;
   height: 200px;
   background-image: url('/static/webapp/NEPTUNE.png'), url('/static/webapp/URANUS.png'), url('/static/webapp/SATURNE.png'), url('/static/webapp/JUPITER.png'), url('/static/webapp/MARS.png'), url('/static/webapp/EARTH.png'), url('/static/webapp/VENUS.png'), url('/static/webapp/MERCURY.png'), url('/static/webapp/SUN.png');
+  background-color:rgba(0, 0, 0, 0.3);
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: calc(7.04% * 0.65), calc(7.26% * 0.65), calc(16.66% * 1.1), calc(20% * 0.65), calc(0.97% * 0.65), calc(1.82% * 0.65), calc(1.73% * 0.65), calc(0.7% * 0.65), calc(20% * 0.65);
@@ -41,10 +39,11 @@ body{
   0 0 20px #99EBEB,
   0 0 30px #66E0E0;
 }
-nav a {
+#navLink {
   opacity:1.0;
   color:#ffffff;
   font-size:15px;
   position:relative;
   margin: 0 50px;
+  text-spacing-trim: 100px;
 }
