--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -14,6 +14,8 @@ body{
   font-family: 'Orbitron', sans-serif;
   width: 100%;
   height: 200px;
+  position:fixed;
+  top:0%;
   background-image: url('/static/webapp/NEPTUNE.png'), url('/static/webapp/URANUS.png'), url('/static/webapp/SATURNE.png'), url('/static/webapp/JUPITER.png'), url('/static/webapp/MARS.png'), url('/static/webapp/EARTH.png'), url('/static/webapp/VENUS.png'), url('/static/webapp/MERCURY.png'), url('/static/webapp/SUN.png');
   background-color:rgba(255, 0, 0, 0.3);
   background-repeat: no-repeat;
@@ -23,14 +25,13 @@ body{
 }
 #wlc_title {
   position: relative;
-  font-weight:bold;
   top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: rgb(92, 204, 204);
-  text-transform: uppercase;
   opacity: 1.0;
   font-size: 50px;
+  font-weight:bold;
   text-shadow: 
   0 0 5px #ffffff,
   0 0 10px #CCF5F5,
@@ -38,9 +39,10 @@ body{
   0 0 30px #66E0E0;
 }
 #navLink {
+  font-weight:lighter;
   opacity:1.0;
   color:#ffffff;
   font-size:15px;
   position:relative;
-  margin: 0 20%;
+  margin: 0 5%;
 }
