--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -13,7 +13,7 @@ body{
 #parallax_nav {
   font-family: 'Orbitron', sans-serif;
   width: 100%;
-  height: 200px;
+  height: 250px;
   position:fixed;
   top:0%;
   background-image: url('/static/webapp/NEPTUNE.png'), url('/static/webapp/URANUS.png'), url('/static/webapp/SATURNE.png'), url('/static/webapp/JUPITER.png'), url('/static/webapp/MARS.png'), url('/static/webapp/EARTH.png'), url('/static/webapp/VENUS.png'), url('/static/webapp/MERCURY.png'), url('/static/webapp/SUN.png');
@@ -27,7 +27,7 @@ body{
   position: relative;
   top: 30%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  text-transform: uppercase;
   color: rgb(92, 204, 204);
   opacity: 1.0;
   font-size: 50px;
@@ -44,5 +44,6 @@ body{
   color:#ffffff;
   font-size:15px;
   position:relative;
-  margin: 0 5%;
+  margin-bottom:20%;
+  margin: 0 10%;
 }
