--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -26,7 +26,7 @@ body{
 #wlc_title {
   position: relative;
   top: 30%;
-  left: 50%;
+  left:auto;
   text-transform: uppercase;
   color: rgb(92, 204, 204);
   opacity: 1.0;
@@ -44,6 +44,5 @@ body{
   color:#ffffff;
   font-size:15px;
   position:relative;
-  margin-bottom:20%;
-  margin: 0 10%;
+  margin:7.5% 7.5% 80% 20%;
 }
