--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -26,7 +26,8 @@ body{
 #wlc_title {
   position: relative;
   top: 30%;
-  left:auto;
+  left: 50%;
+  transform: translate(-50%, -50%);
   text-transform: uppercase;
   color: rgb(92, 204, 204);
   opacity: 1.0;
@@ -44,5 +45,6 @@ body{
   color:#ffffff;
   font-size:15px;
   position:relative;
-  margin:7.5% 7.5% 80% 20%;
+  margin-bottom:20%;
+  margin:0 7.5%;
 }
