--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -14,7 +14,7 @@ body{
   font-family: 'Orbitron', sans-serif;
   width: 100%;
   height: 250px;
-  position:fixed;
+  position: relative;
   top:0%;
   background-image: url('/static/webapp/NEPTUNE.png'), url('/static/webapp/URANUS.png'), url('/static/webapp/SATURNE.png'), url('/static/webapp/JUPITER.png'), url('/static/webapp/MARS.png'), url('/static/webapp/EARTH.png'), url('/static/webapp/VENUS.png'), url('/static/webapp/MERCURY.png'), url('/static/webapp/SUN.png');
   background-color:rgba(255, 0, 0, 0.3);
@@ -45,6 +45,6 @@ body{
   color:#ffffff;
   font-size:15px;
   position:relative;
-  margin-bottom:20%;
+  margin-bottom:10%;
   margin:0 7.5%;
 }
