--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -10,12 +10,15 @@ body{
   background-repeat: repeat;
   background-position: center;
 }
+nav {
+  position:fixed;
+  top:0%;
+}
 #parallax_nav {
   font-family: 'Orbitron', sans-serif;
   width: 100%;
   height: 250px;
   position: relative;
-  top:0%;
   background-image: url('/static/webapp/NEPTUNE.png'), url('/static/webapp/URANUS.png'), url('/static/webapp/SATURNE.png'), url('/static/webapp/JUPITER.png'), url('/static/webapp/MARS.png'), url('/static/webapp/EARTH.png'), url('/static/webapp/VENUS.png'), url('/static/webapp/MERCURY.png'), url('/static/webapp/SUN.png');
   background-color:rgba(255, 0, 0, 0.3);
   background-repeat: no-repeat;
@@ -24,7 +27,7 @@ body{
   opacity: 1.0;
 }
 #wlc_title {
-  position: relative;
+  position: absolute;
   top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -44,7 +47,7 @@ body{
   opacity:1.0;
   color:#ffffff;
   font-size:15px;
-  position:relative;
+  position:absolute;
   margin-bottom:10%;
   margin:0 7.5%;
 }
