--- a/webserver/mysite/webapp/templates/webapp/home.html
+++ b/webserver/mysite/webapp/templates/webapp/home.html
@@ -7,13 +7,15 @@
         <link rel="stylesheet" href="{% static 'webapp/home.css' %}">
     </head>
     <body>
-        <nav id="parallax_nav">
-            <h1 id="wlc_title">@auto_astro</h1>
-            <br><br>
-            <a href='' id="navLink">Sign Up / Log in</a>
-            <a href='' id="navLink">Explore the Skies</a>
-            <a href='' id="navLink">About</a>
-            <a href='' id="navLink">Contact Us</a>
+        <nav>
+            <div id="parallax_nav">
+                <h1 id="wlc_title">@auto_astro</h1>
+                <br><br>
+                <a href='' id="navLink">Sign Up / Log in</a>
+                <a href='' id="navLink">Explore the Skies</a>
+                <a href='' id="navLink">About</a>
+                <a href='' id="navLink">Contact Us</a>
+            </div>
         </nav>
         <!-- Parallax for Proportional Solar System in NAV -->
         <script>
