--- a/webserver/mysite/webapp/templates/webapp/home.html
+++ b/webserver/mysite/webapp/templates/webapp/home.html
@@ -7,8 +7,8 @@
         <link rel="stylesheet" href="{% static 'webapp/home.css' %}">
     </head>
     <body>
-        <nav>
-            <div id="parallax_nav">
+        <nav id="parallax_nav">
+            <div id="shitty_container">
                 <h1 id="wlc_title">@auto_astro</h1>
                 <br><br>
                 <a href='' id="navLink">Sign Up / Log in</a>
