--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -48,6 +48,8 @@ body{
   color:#ffffff;
   font-size:15px;
   position:absolute;
-  margin-bottom:10%;
-  margin:0 7.5%;
+  top:50%;
+  transform: translate(0%, -50%);
+  margin-left:50px;
+  margin-right:50px;
 }
