--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -24,7 +24,9 @@ body{
   opacity: 1.0;
 }
 #shitty_container {
-  position: relative;
+  position: relative;  
+  width: 100%;
+  height: 250px;
 }
 #wlc_title {
   position: absolute;
