--- a/webserver/mysite/webapp/templates/webapp/home.html
+++ b/webserver/mysite/webapp/templates/webapp/home.html
@@ -30,21 +30,23 @@
                     let _mouseX = e.clientX;
                     let _mouseY = e.clientY;
                     
+                    dampening_factor = 0.5;
+
                     if (_mouseY < 250){
-                    let _depth1 = `${50 - (_mouseX - _w) * 0.005}% ${50 - (_mouseY - _h) * 0.005}%`;
-                    let _depth2 = `${50 - (_mouseX - _w) * 0.01}% ${50 - (_mouseY - _h) * 0.01}%`;
-                    let _depth3 = `${50 - (_mouseX - _w) * 0.02}% ${50 - (_mouseY - _h) * 0.02}%`;
-                    let _depth4 = `${50 - (_mouseX - _w) * 0.026}% ${50 - (_mouseY - _h) * 0.026}%`;
-                    let _depth5 = `${50 - (_mouseX - _w) * 0.04}% ${50 - (_mouseY - _h) * 0.04}%`;
-                    let _depth6 = `${50 - (_mouseX - _w) * 0.135}% ${50 - (_mouseY - _h) * 0.135}%`;
-                    let _depth7 = `${50 - (_mouseX - _w) * 0.246}% ${50 - (_mouseY - _h) * 0.246}%`;
-                    let _depth8 = `${50 - (_mouseX - _w) * 0.3}% ${50 - (_mouseY - _h) * 0.3}%`;
-                    let _depth9 = `${50 - (_mouseX - _w) * 0.4}% ${50 - (_mouseY - _h) * 0.4}%`;
+                    let _depth1 = `${50 - (_mouseX - _w) * 0.005 * dampening_factor}% ${50 - (_mouseY - _h) * 0.005 * dampening_factor}%`;
+                    let _depth2 = `${50 - (_mouseX - _w) * 0.01 * dampening_factor}% ${50 - (_mouseY - _h) * 0.01 * dampening_factor}%`;
+                    let _depth3 = `${50 - (_mouseX - _w) * 0.02 * dampening_factor}% ${50 - (_mouseY - _h) * 0.02 * dampening_factor}%`;
+                    let _depth4 = `${50 - (_mouseX - _w) * 0.026 * dampening_factor}% ${50 - (_mouseY - _h) * 0.026 * dampening_factor}%`;
+                    let _depth5 = `${50 - (_mouseX - _w) * 0.04 * dampening_factor}% ${50 - (_mouseY - _h) * 0.04 * dampening_factor}%`;
+                    let _depth6 = `${50 - (_mouseX - _w) * 0.135 * dampening_factor}% ${50 - (_mouseY - _h) * 0.135 * dampening_factor}%`;
+                    let _depth7 = `${50 - (_mouseX - _w) * 0.246 * dampening_factor}% ${50 - (_mouseY - _h) * 0.246 * dampening_factor}%`;
+                    let _depth8 = `${50 - (_mouseX - _w) * 0.5 * dampening_factor}% ${50 - (_mouseY - _h) * 0.5 * dampening_factor}%`;
+                    let _depth9 = `${50 - (_mouseX - _w) * 0.77 * dampening_factor}% ${50 - (_mouseY - _h) * 0.77 * dampening_factor}%`;
                     let x = `${_depth9}, ${_depth8}, ${_depth7}, ${_depth6}, ${_depth5}, ${_depth4}, ${_depth3}, ${_depth2}, ${_depth1}`;
                     elem.style.backgroundPosition = x;
                     }
                     else {
-                        elem.style.backgroundPosition = `50% 50%, ${_depth2}, ${_depth3}, ${_depth4}, ${_depth5}, ${_depth6}, ${_depth7}, ${_depth8}, ${_depth9}`;
+                        elem.style.backgroundPosition = `${_depth1}, ${_depth2}, ${_depth3}, ${_depth4}, ${_depth5}, ${_depth6}, ${_depth7}, ${_depth8}, ${_depth9}`;
                     }
                 }
             })();
