--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -44,12 +44,43 @@ body{
   0 0 20px #99EBEB,
   0 0 30px #66E0E0;
 }
-#navLink {
+#navLOG {
   font-weight:lighter;
   opacity:1.0;
   color:#ffffff;
   font-size:15px;
   position:absolute;
   top:80%;
-  padding:100px;
+  margin-left:50px;
+  margin-right:50px;
+}
+#navUSE {
+  font-weight:lighter;
+  opacity:1.0;
+  color:#ffffff;
+  font-size:15px;
+  position:absolute;
+  top:80%;
+  margin-left:50px;
+  margin-right:50px;
+}
+#navABO {
+  font-weight:lighter;
+  opacity:1.0;
+  color:#ffffff;
+  font-size:15px;
+  position:absolute;
+  top:80%;
+  margin-left:50px;
+  margin-right:50px;
+}
+#navCON {
+  font-weight:lighter;
+  opacity:1.0;
+  color:#ffffff;
+  font-size:15px;
+  position:absolute;
+  top:80%;
+  margin-left:50px;
+  margin-right:50px;
 }
