--- a/webserver/mysite/webapp/templates/webapp/home.html
+++ b/webserver/mysite/webapp/templates/webapp/home.html
@@ -25,8 +25,8 @@
                 
                 // Magic happens here
                 function parallax_nav(e) {
-                    let _w = 1080;
-                    let _h = 250;
+                    let _w = 1080/2;
+                    let _h = 250/2;
                     let _mouseX = e.clientX;
                     let _mouseY = e.clientY;
 
