--- a/webserver/mysite/webapp/templates/webapp/home.html
+++ b/webserver/mysite/webapp/templates/webapp/home.html
@@ -13,7 +13,7 @@
                 <a href='' id="navLOG">Sign Up / Log in</a>
                 <a href='' id="navUSE">Explore the Skies</a>
                 <a href='' id="navABO">About</a>
-                <a href='' id="navCON">Contact Us</a>
+                <a href='' id="navCON">Contact&nbsp;Us</a>
             </div>
         </nav>
         <!-- Parallax for Proportional Solar System in NAV -->
