--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -51,12 +51,19 @@ body{
   opacity: 1.0;
   color: #ffffff;
   font-size: 15px;
-  margin: 0;             /* remove fixed margins */
-  top: auto;             /* unset top */
+  margin: 0;
+  top: auto;
 }
 
-/* Place them equally spaced by using left % */
-#navLOG { left: 10%; }
-#navUSE { left: 35%; }
-#navABO { left: 60%; }
-#navCON { left: 85%; }
+/* Fixed margin from left and right edges */
+#navLOG { left: 50px; }        /* fixed distance from left edge */
+#navCON { right: 50px; }       /* fixed distance from right edge */
+
+/* Middle two spaced evenly between */
+#navUSE {
+  left: calc(50% - 60px);      /* roughly between left and center */
+}
+
+#navABO {
+  left: 60%;                   /* adjust as needed to be evenly spaced */
+}
