--- a/webserver/mysite/webapp/templates/webapp/home.html
+++ b/webserver/mysite/webapp/templates/webapp/home.html
@@ -10,7 +10,7 @@
         <nav id="parallax_nav">
             <div id="shitty_container">
                 <h1 id="wlc_title">@auto_astro</h1>
-                <a href="{% url 'login'}" id="navLOG">Sign Up / Log in</a>
+                <a href="{% url 'login' %}" id="navLOG">Sign Up / Log in</a>
                 <a href='' id="navUSE">Explore the Skies</a>
                 <a href='' id="navABO">About</a>
                 <a href='' id="navCON">Contact&nbsp;Us</a>
