do not fight it, join it

--- a/webserver/mysite/astronomers/templates/registration/login.html
+++ b/webserver/mysite/astronomers/templates/registration/login.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>@auto_astro Astronomers' Login</title>
         {% load static %}
-        <link rel="stylesheet" href="{% static 'authentification/login.css' %}">
+        <link rel="stylesheet" href="{% static 'registration/login.css' %}">
     </head>
     <body>
         <h1>Login :</h1>
