--- a/webserver/mysite/astronomers/templates/registration/base.html
+++ b/webserver/mysite/astronomers/templates/registration/base.html
@@ -10,6 +10,11 @@
         <br/>
         <div class="container">
             {% block content %}
+                {% if messages %}
+                    {% for message in messages %}
+                        {{message}}
+                    {% endfor %}
+                {% endif %}
             {% endblock %}
         </div>
     </body>
