--- a/webserver/mysite/astronomers/templates/registration/base.html
+++ b/webserver/mysite/astronomers/templates/registration/base.html
@@ -9,14 +9,11 @@
     {% block extra_css %}{% endblock %}
 </head>
 <body>
-    <div class="container mt-4">
+    <div class="container">
         <!-- Display Django messages -->
         {% if messages %}
             {% for message in messages %}
-                <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
-                    {{ message }}
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
+                {{ message }}
             {% endfor %}
         {% endif %}
 
