--- a/webserver/mysite/astronomers/templates/registration/base.html
+++ b/webserver/mysite/astronomers/templates/registration/base.html
@@ -13,7 +13,10 @@
         <!-- Display Django messages -->
         {% if messages %}
             {% for message in messages %}
-                {{ message }}
+                <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                    {{ message }}
+                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
             {% endfor %}
         {% endif %}
 
