--- a/webserver/mysite/astronomers/templates/registration/login.html
+++ b/webserver/mysite/astronomers/templates/registration/login.html
@@ -12,13 +12,14 @@
 
         <!-- Django Messages -->
         {% if messages %}
+        <ul class="messages">
             {% for message in messages %}
-                <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
                     {{ message }}
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
+                </li>
             {% endfor %}
-        {% endif %}
+        </ul>
+         {% endif %}
 
         <!-- Login Form -->
         <h1 class="mb-4">Login:</h1>
