--- a/webserver/mysite/astronomers/templates/registration/login.html
+++ b/webserver/mysite/astronomers/templates/registration/login.html
@@ -6,20 +6,20 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap');
+
+        #godforsakeme{
+            font-family:'Orbitron', sans-serif;
+            color:darkred;
+            font-size: 20px;
+        }
+    </style>
 </head>
 <body>
     <div class="container mt-5">
 
-        <!-- Django Messages -->
-        {% if messages %}
-        <ul class="messages">
-            {% for message in messages %}
-                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
-                    {{ message }}
-                </li>
-            {% endfor %}
-        </ul>
-         {% endif %}
+        <p id='godforsakeme'>This page won't keep reloading UNTIL the astronomer (u) inputs a correct login</p>
 
         <!-- Login Form -->
         <h1 class="mb-4">Login:</h1>
