--- a/webserver/mysite/astronomers/templates/registration/login.html
+++ b/webserver/mysite/astronomers/templates/registration/login.html
@@ -14,6 +14,16 @@
             color:darkred;
             font-size: 20px;
         }
+        body{
+            margin: 0;
+            background-image:url('STARRY.gif');
+            font-family: 'Orbitron', sans-serif;
+            margin: 0;
+            background-color: #000000;
+            background-image: url('STARRY.gif');
+            background-repeat: repeat;
+            background-position: center;
+        }  
     </style>
 </head>
 <body>
@@ -37,6 +47,30 @@
         </form>
 
     </div>
+
+            </script>
+        <!-- Parallax Effect for Dynamic Starry Background in Body-->
+         <script>
+            (function() {
+                // Add event listener
+                document.addEventListener("mousemove", parallax_body);
+                const elem = document.querySelector("body");
+                
+                // Magic happens here
+                function parallax_body(e) {
+                    let _w = window.innerWidth;
+                    let _h = window.innerHeight;
+                    let _mouseX = e.clientX;
+                    let _mouseY = e.clientY;
+
+                    let offset_coeff = 0.005;
+                    let bg_Xoffset = -(_mouseX - _w/2) * offset_coeff;
+                    let bg_Yoffset = -(_mouseY - _h/2) * offset_coeff * -1.75;
+
+                    elem.style.backgroundPosition = `${bg_Xoffset}% ${bg_Yoffset}%`;
+                }
+            })();
+        </script>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
