--- a/webserver/mysite/astronomers/templates/registration/login.html
+++ b/webserver/mysite/astronomers/templates/registration/login.html
@@ -17,7 +17,7 @@
         }
         body{
             margin: 0;
-            background-image:url("{% static 'astronomers/STARRY.gif' %}"");
+            background-image:url("{% static 'astronomers/STARRY.gif' %}");
             font-family: 'Orbitron', sans-serif;
             margin: 0;
             background-color: #000000;
