--- a/webserver/mysite/astronomers/templates/registration/login.html
+++ b/webserver/mysite/astronomers/templates/registration/login.html
@@ -7,23 +7,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     {% load static %}
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap');
-
-        #godforsakeme{
-            font-family:'Orbitron', sans-serif;
-            color:darkred;
-            font-size: 20px;
-        }
-        body{
-            margin: 0;
-            background-image:url("{% static 'astronomers/STARRY.gif' %}");
-            font-family: 'Orbitron', sans-serif;
-            margin: 0;
-            background-repeat: repeat;
-            background-position: center;
-        }  
-    </style>
+    <link rel="stylesheet" href="{% static 'astronomers/login.css' %}">
 </head>
 <body>
     <div class="container mt-5">
