--- a/webserver/mysite/astronomers/static/astronomers/login.css
+++ b/webserver/mysite/astronomers/static/astronomers/login.css
@@ -7,9 +7,14 @@
 }
 body{
     margin: 0;
-    background-image:url("{% static 'astronomers/STARRY.gif' %}");
+    background-image:url("TARRY.gif' %");
     font-family: 'Orbitron', sans-serif;
     margin: 0;
     background-repeat: repeat;
     background-position: center;
 }  
+
+#text {
+    font-family:'Orbitron', sans-serif;
+    color:white;
+}
