gpt'ed the mistakes

--- a/webserver/mysite/astronomers/static/astronomers/login.css
+++ b/webserver/mysite/astronomers/static/astronomers/login.css
@@ -7,7 +7,7 @@
 }
 body{
     margin: 0;
-    background-image:url("TARRY.gif' %");
+    background-image:url("STARRY.gif' %");
     font-family: 'Orbitron', sans-serif;
     margin: 0;
     background-repeat: repeat;
