--- a/webserver/mysite/astronomers/templates/registration/login.html
+++ b/webserver/mysite/astronomers/templates/registration/login.html
@@ -6,9 +6,29 @@
 
     <!-- Bootstrap CSS (load first so custom CSS overrides it) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap');
 
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'astronomers/login.css' %}">
+        #godforsakeme{
+            font-family:'Orbitron', sans-serif;
+            color:darkred;
+            font-size: 20px;
+        }
+        body{
+            margin: 0;
+            background-image:url("STARRY.gif'");
+            font-family: 'Orbitron', sans-serif;
+            margin: 0;
+            background-repeat: repeat;
+            background-position: center;
+        }  
+
+        #text {
+            font-family:'Orbitron', sans-serif;
+            color:white;
+        }
+    </style>
 </head>
 <body>
     <div class="container mt-5">
