--- a/webserver/mysite/astronomers/templates/registration/login.html
+++ b/webserver/mysite/astronomers/templates/registration/login.html
@@ -6,7 +6,6 @@
 
     <!-- Bootstrap CSS (load first so custom CSS overrides it) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    {% load static %}
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap');
 
@@ -17,7 +16,7 @@
         }
         body{
             margin: 0;
-            background-image:url("{% static 'astronomers/STARRY.gif' %}");
+            background-image:url("./STARRY.gif");
             font-family: 'Orbitron', sans-serif;
             background-repeat: repeat;
             background-position: center;
