--- a/webserver/mysite/astronomers/templates/registration/login.html
+++ b/webserver/mysite/astronomers/templates/registration/login.html
@@ -17,7 +17,7 @@
         }
         body{
             margin: 0;
-            background-image:url("{% static 'astronomers/STARRY.gif' %}");
+            background-image:url("{% static 'astronomers/static/astronomers/STARRY.gif' %}");
             font-family: 'Orbitron', sans-serif;
             background-repeat: repeat;
             background-position: center;
