minor design changes

--- a/webserver/mysite/astronomers/templates/registration/login.html
+++ b/webserver/mysite/astronomers/templates/registration/login.html
@@ -12,7 +12,7 @@
 
         #godforsakeme{
             font-family:'Orbitron', sans-serif;
-            color:darkred;
+            color:rgb(160, 0, 0);
             font-size: 20px;
         }
         body{
@@ -33,7 +33,7 @@
     <div class="container mt-5">
 
         <p id="godforsakeme">
-            This page won't keep reloading UNTIL the astronomer (u) inputs a correct login
+            This page WILL keep reloading UNTIL the astronomer (u) inputs a correct login
         </p>
 
         <!-- Login Form -->
