--- a/webserver/mysite/astronomers/templates/registration/login.html
+++ b/webserver/mysite/astronomers/templates/registration/login.html
@@ -22,10 +22,20 @@
             background-repeat: repeat;
             background-position: center;
         }  
-
         #text {
             font-family:'Orbitron', sans-serif;
             color:white;
+        }
+        #container {
+            position:relative;
+            height:100%;
+            width:100%;
+        }
+        #login_form{
+            position:absolute;
+            top:50%;
+            left:50%;
+            transform: translate(-50%, -50%);
         }
     </style>
 </head>
