--- a/webserver/mysite/astronomers/templates/registration/login.html
+++ b/webserver/mysite/astronomers/templates/registration/login.html
@@ -33,9 +33,10 @@
         }
         #login_form{
             position:absolute;
+            width:65%;
+            height:65%;
             top:50%;
             left:50%;
-            transform: translate(-50%, -50%);
         }
     </style>
 </head>
