--- a/webserver/mysite/astronomers/templates/registration/login.html
+++ b/webserver/mysite/astronomers/templates/registration/login.html
@@ -37,6 +37,7 @@
             height:65%;
             top:50%;
             left:50%;
+            transform: translate(-50%, -50%);
         }
     </style>
 </head>
