since https solved most of my problems, I'm rolli- ng back a few changes

--- a/webserver/mysite/astronomers/templates/registration/login.html
+++ b/webserver/mysite/astronomers/templates/registration/login.html
@@ -10,11 +10,6 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap');
 
-        #godforsakeme{
-            font-family:'Orbitron', sans-serif;
-            color:rgb(160, 0, 0);
-            font-size: 20px;
-        }
         body{
             margin: 0;
             background-image:url("{% static 'astronomers/STARRY.gif' %}");
@@ -43,10 +38,14 @@
 </head>
 <body>
     <div class="container mt-5">
+        {% if messages %}
+            {% for message in messages %}
+                {{ message }}
+            {% endfor %}
+        {% endif %}
 
-        <p id="godforsakeme">
-            This page WILL keep reloading UNTIL the astronomer (u) inputs a correct login
-        </p>
+        {% block content %}
+        {% endblock %}
 
         <!-- Login Form -->
         <h1 id="text" class="mb-4">Login:</h1>
