--- a/webserver/mysite/astronomers/templates/registration/login.html
+++ b/webserver/mysite/astronomers/templates/registration/login.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,36 +17,20 @@
         }
         body{
             margin: 0;
+            background-color:rgba(255, 255, 255, 0.9);
+            background-image:url("{% static 'astronomers/STARRY.gif' %}");
             font-family: 'Orbitron', sans-serif;
-            background-image: url("https://i.gifer.com/7VE.gif");
             background-repeat: repeat;
             background-position: center;
-            background-attachment: fixed;
-            position: relative;
-        }
-        
-        /* White overlay using ::before pseudo-element */
-        body::before {
-            content: '';
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(255, 255, 255, 0.85);
-            z-index: -1;
-            pointer-events: none;
-        }
-        
+        }  
         #text {
             font-family:'Orbitron', sans-serif;
-            color: #333;
+            color:white;
         }
         #container {
             position:relative;
             height:100%;
             width:100%;
-            z-index: 1;
         }
         #login_form{
             position:absolute;
@@ -54,7 +39,6 @@
             top:50%;
             left:50%;
             transform: translate(-50%, -50%);
-            z-index: 2;
         }
     </style>
 </head>
@@ -68,6 +52,7 @@
         <!-- Login Form -->
         <h1 id="text" class="mb-4">Login:</h1>
         <form id="login_form" action="" method="POST">
+            {% csrf_token %}
             <div class="mb-3">
                 <label id="text" for="username" class="form-label">Username</label>
                 <input type="text" class="form-control" id="username" name="username" aria-describedby="usernameHelp">
