--- a/webserver/mysite/webapp/templates/webapp/home.html
+++ b/webserver/mysite/webapp/templates/webapp/home.html
@@ -11,7 +11,7 @@
             <div id="shitty_container">
                 <h1 id="wlc_title">@auto_astro</h1>
                 {% if user.is_authenticated %}
-                <a href="{% url 'login' %}" id="navLOG">Log Out</a>
+                <a href="{% url 'logout' %}" id="navOUT">Log Out</a>
                 {% else %}
                 <a href="{% url 'login' %}" id="navLOG">Log in</a>
                 {% endif %}
