my dreams are crushed

--- a/webserver/mysite/astronomers/templates/registration/register_astronomer.html
+++ b/webserver/mysite/astronomers/templates/registration/register_astronomer.html
@@ -37,9 +37,9 @@
             font-size:auto;
             color:#ffffff;
             position:absolute;
-            width:93%;
-            height:auto;
-            left:7%;
+            width:65%;
+            height:40%;
+            left:6%;
         }
     </style>
 </head>
