his name... is Elon Musk, he has a birthing fetish

--- a/webserver/mysite/astronomers/templates/registration/register_astronomer.html
+++ b/webserver/mysite/astronomers/templates/registration/register_astronomer.html
@@ -37,8 +37,8 @@
             font-size:auto;
             color:#ffffff;
             position:absolute;
-            width:65%;
-            height:40%;
+            width:auto;
+            height:auto;
             left:6%;
         }
     </style>
