Adding a welcome greeting for logged-in users

--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -74,3 +74,10 @@ body{
 #navUSE { left: 30%; }
 #navABO { left: 60%; }
 #navCON { right: 10%; }
+
+#wlc_greet {
+  color:white;
+  position:absolute;
+  top:5%;
+  left:5%;
+}
