Adding functionality to contact page

--- a/webserver/mysite/webapp/templates/webapp/contact.html
+++ b/webserver/mysite/webapp/templates/webapp/contact.html
@@ -9,5 +9,20 @@
     </head>
     <body>
         <h1>Hi ! This is the contact form !</h1>
+        <form class="" method="post" action="#">
+            <div class="mb-3">
+                <label for="fname">Name:</label>
+                <input  name="name" type="text" class="form-control" id="name" aria-describedby="emailHelp">
+            </div>
+            <div class="mb-3">
+                <label name="email" for="EmailAddress" class="form-label">Email:</label>
+                <input name="email" type="email" class="form-control" id="email">
+            </div>
+            <div class="mb-3">
+                <label for="subject" class="form-label">Subject:</label>
+                <textarea name="subject" class="form-control" id="subject" placeholder="How can you be so cool XD ?!"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
     </body>
 </html>
