--- a/webserver/mysite/webapp/templates/webapp/home.html
+++ b/webserver/mysite/webapp/templates/webapp/home.html
@@ -24,9 +24,9 @@
                 </form>
                 <a href="{% url 'login' %}" id="navLOG">&nbsp;Log in</a>
                 {% endif %}
-                <a href="{% url 'contact' %}" id="navUSE">Explore the Skies</a>
+                <a href="" id="navUSE">Explore the Skies</a>
                 <a href='' id="navABO">About</a>
-                <a href='' id="navCON">Contact&nbsp;Us</a> 
+                <a href="{% url 'contact' %}" id="navCON">Contact&nbsp;Us</a> 
             </div>
         </nav>
         <!-- Parallax for Proportional Solar System in NAV -->
